<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="login">Login/Sign Up</string>
    <string name="copyright_notice">Copyright© 2020 Minimalistic Apps All Rights reserved.</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="message_logout">Are you sure you want to logout?</string>
    <string name="message_exit">Are you sure you want to close app?</string>
    <string name="message_default_title">Message</string>
    <string name="drawer_travels">Trip History</string>
    <string name="drawer_edit_profile">Edit Profile</string>
    <string name="drawer_support">Support</string>
    <string name="drawer_about">About</string>
    <string name="drawer_exit">Exit</string>
    <string name="eta_time">ETA</string>
    <string name="distance_remained">Distance Remained</string>
    <string name="cost">Travel Cost</string>
    <string name="prompt_storage_rw">You need to grant access to storage in following dialog</string>
    <string name="alert_retry">Retry</string>
    <string name="service_canceled">Service Was canceled</string>
    <string name="write_complaint">Complaint</string>
    <string name="description">Description</string>
    <string name="message_complaint_sent">Complaint was sent. You will be contacted by us soon.</string>
    <string name="alert_send">Send</string>
    <string name="about_contacts">Contact Information</string>
    <string name="version_name">Version %s</string>
    <string name="legal_notices">Legal Notices</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_title">E-Mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Your Address</string>
    <string name="driver_app_name">Ridy Driver</string>
    <string name="about_driver_description">Driver Taxi application.</string>
    <string name="drawer_earnings">Earnings</string>
    <string name="request_accept">ACCEPT</string>
    <string name="request_decline">DECLINE</string>
    <string name="confirm_service_empty">Confirm Service</string>
    <string name="confirm_service">Request Now</string>
    <string name="message_payment_request_sent">Payment Request has been sent.</string>
    <string name="request_payment">Request Payment</string>
    <string name="services">Services</string>
    <string name="stats_daily">Daily</string>
    <string name="stats_weekly">Weekly</string>
    <string name="stats_monthly">Monthly</string>
    <string name="rides_color">Ride\'s Color</string>
    <string name="ride_production_year">Ride\'s Production Year</string>
    <string name="plate_number">Plate Number</string>
    <string name="item_request_title_from">From</string>
    <string name="item_request_title_to">To</string>
    <string name="distance">Distance</string>
    <string name="login_failed">Login Failed.</string>
    <string name="app_name">Ridy</string>
    <string name="drawer_wallet">Wallet</string>
    <string name="about_rider_description">Rider Taxi application.</string>
    <string name="account_balance">Account balance</string>
    <string name="write_your_review_here">Write your review here…</string>
    <string name="review_action">Review</string>
    <string name="checkout_empty">Checkout</string>
    <string name="checkout_filled">Checkout %s</string>
    <string name="account_charge_success">Wallet credit has been charged Successfully.</string>
    <string name="unknown_location">Unknown</string>
    <string name="hide_travel">Hide</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="error_408">Your Request Timed out.</string>
    <string name="error_666">Unknown Error accrued.</string>
    <string name="error_400">Error Happened During payment.</string>
    <string name="error_404">No Online Driver Found.</string>
    <string name="error_405">Region not supported.</string>
    <string name="error_406">Region is supported but no service was enabled for this region.</string>
    <string name="error_410">Your version is outdated. Update to new version.</string>
    <string name="error_411">Your profile has been created but as a driver your profile needs to be evaluated and enabled from dashboard.</string>
    <string name="error_412">Your profile has been disabled. Please contact support for help in this.</string>
    <string name="error_418">Confirmation Code Not provided.</string>
    <string name="error_419">Confirmation Code invalid.</string>
    <string name="error_303">There isn\'t any driver available close to you at the moment. Try Again Later.</string>
    <string name="error_304">No Route found.</string>
    <string name="error_704">Coupon code is invalid.</string>
    <string name="error_703">Coupon code is already used.</string>
    <string name="error_702">Coupon code is expired.</string>
    <string name="error_901">Another payment request is waiting.</string>
    <string name="error_902">Your credit isn\'t sufficient to request a payment.</string>
    <string name="error_903">Your account is temporarily disabled due to not having sufficient credit.</string>
    <string name="info_edit_profile_success">Edit Profile was successful.</string>
    <string name="waiting_passenger">Waiting for Passenger to accept.</string>
    <string name="info_travel_hidden">Travel info hide successful.</string>
    <string name="charge_amount">Amount</string>
    <string name="confirm_pickup_location">Confirm pickup Location</string>
    <string name="confirm_destination">Confirm destination</string>
    <string name="call">Call</string>
    <string name="message_review_sent">You review has been sent.</string>
    <string-array name="genders">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="drawer_favorite_locations">Favorite Locations</string>
    <string name="request_time">Request Time</string>
    <string name="finish_time">Finish Time</string>
    <string name="duration">Duration</string>
    <string name="title">Title</string>
    <string name="edit_address_dialog_title">Edit Address</string>
    <string name="add_address_dialog_title">Add Address</string>
    <string name="start_travel">Start</string>
    <string name="slide_arrived">Arrived</string>
    <string name="cancel_travel">Cancel</string>
    <string name="finish_travel">Finish</string>
    <string name="edit_address">Edit</string>
    <string name="delete_address">Delete</string>
    <string name="driver_id">ID</string>
    <string name="review_dialog_title">Review</string>
    <string name="gender">Gender</string>
    <string name="ucrop_label_original" tools:override="true">Original</string>
    <string name="ucrop_label_edit_photo" tools:override="true">Edit Photo</string>
    <string name="ucrop_menu_crop" tools:override="true">Crop</string>
    <string name="warning_voice_recognizer_failed">Voice recognizer failed to understand.</string>
    <string name="question_install_speech">Voice search service not found. do you want to install it?</string>
    <string name="search_default">Search…</string>
    <string name="message_travel_started">Trip has began.</string>
    <string name="picker_tap_select">Tap to select</string>
    <string name="picker_folder">Folder</string>
    <string name="message_enable_wifi">Please enable Data or WiFi as an internet connection</string>
    <string name="message_verification">Enter your mobile number that you want to receive activation code.</string>
    <string name="title_verification">Verification</string>
    <string name="message_verify">A code has been sent to your phone. Enter it here.</string>
    <string name="verify_code">Verify</string>
    <string name="activation_code">Activation code</string>
    <string name="title_verify">Verify code</string>
    <string name="select_payment_method">Select payment method:</string>
    <string name="question_hide_travel">Are you sure you want to hide travel? this action is not reversible however the travel info is still available for operator.</string>
    <string name="question_delete_address">Are you sure you want to delete this address?</string>
    <string name="message_enable_gps">Please enable GPS before proceeding.</string>
    <string name="message_internet_connection">In order to use this app you would need to enable your internet connection.</string>
    <string name="error_charge_field_empty">Amount field can\'t be empty.</string>
    <string name="error_charge_field_less_than_trip_fee">Amount field can\'t be less than trip fee.</string>
    <string name="warning_no_favorite_place">You haven\'t added any favorite place.</string>
    <string name="tab_driver_info">Driver Info</string>
    <string name="tab_statistics">Statistics</string>
    <string name="tab_review">Review</string>
    <string name="travel_number_title">ID: %d</string>
    <string name="drawer_transactions">Transactions</string>
    <string name="drawer_coupons">Coupons</string>
    <string name="drawer_promotions">Promotions</string>
    <string name="coupon_days_left">%d DAYS LEFT</string>
    <string name="transaction_number"># %s</string>
    <string name="coupon_select">SELECT</string>
    <string name="coupon_days_left_bare">DAYS LEFT</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="time_is_past_now">Time Selected is before current time. Please try again selecting a later time.</string>
    <string name="book_later_button">Book For %s</string>
    <string name="chat_enter_message_hint">Enter message…</string>
    <string name="chat_activity_title">Chat</string>
    <string name="eta_soon">Soon!</string>
    <string name="distance_traveled">distance Traveled</string>
    <string name="documents_needed_to_upload">You need to upload following documents in order to get approved:\n-Copy of ID\n-Picture of vehicle\n-Copy of Driving License</string>
    <string name="button_upload_document">Upload Document</string>
    <string name="services_to_select">Select services you can provide. It will need admin approval and there might be some changes done by admin on them.</string>
    <string name="soft_reject_notice">Your profile needs some changes. Here is note on changes you need to do: \n%s</string>
    <string name="driver_registration_admin_note">Note:</string>
    <string name="driver_registration_status">Status:</string>
    <string name="confirmation_code_message">Confirmation code is enabled and driver will need to enter this code to finish the service: %d</string>
    <string name="certificate_number">Driver License Id</string>
    <string name="bank_account_number">Bank Account Number or IBAN (if applicable)</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_routing_number">Bank Routing Number</string>
    <string name="bank_swift">Bank SWIFT or BIC code (if applicable)</string>
    <string name="car_year_model">Car Production Year</string>
    <string name="upload_profile">Upload your photo</string>
    <string name="add_destination">Add Destination</string>
    <string name="request_status_requested">Requested</string>
    <string name="request_status_not_found">Not Found</string>
    <string name="request_status_no_close_found">No Close Found</string>
    <string name="request_status_found">Found</string>
    <string name="request_status_driver_accepted">Driver Accepted</string>
    <string name="request_status_arrived">Arrived</string>
    <string name="request_status_waiting_for_pre_pay">Waiting For PrePay</string>
    <string name="request_status_rider_canceled">Rider Canceled</string>
    <string name="request_status_driver_canceled">Driver Canceled</string>
    <string name="request_status_waiting_for_post_pay">Waiting For PostPay</string>
</resources>