<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription">
    <data>
        <import type="android.view.View"/>
        <variable
            name="item"
            type="com.innomalist.taxi.common.models.Request"/>
    </data>
        <androidx.cardview.widget.CardView
            android:id="@+id/cell_content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingBottom="7dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{@string/travel_number_title(item.id)}'
                        android:textSize="14sp"
                        android:maxWidth="150dp"
                        android:textColor="?attr/colorOnSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/text_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:maxWidth="150dp"
                        android:textColor="?attr/colorOnSecondary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/image_map"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:imgUrl="@{item.imageUrl}"
                    android:visibility="gone"
                    app:layout_constraintDimensionRatio="3:2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraint_id" />


                <TextView
                    android:id="@+id/label_from"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/item_request_title_from"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_map" />

                <TextView
                    android:id="@+id/text_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@{item.addresses.get(0)}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/text_to"
                    app:layout_constraintStart_toStartOf="@id/label_from"
                    app:layout_constraintTop_toBottomOf="@id/label_from" />

                <TextView
                    android:id="@+id/label_to"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_request_title_to"
                    app:layout_constraintBaseline_toBaselineOf="@id/label_from"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@{item.addresses.get(item.addresses.size() - 1)}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/label_to"
                    app:layout_constraintTop_toBottomOf="@id/label_to" />

                <ImageView
                    android:id="@+id/divider_address"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:src="#e0e0e0"
                    app:layout_constraintTop_toBottomOf="@id/text_from" />

                <TextView
                    android:id="@+id/label_request_time"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/request_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_address" />

                <TextView
                    android:id="@+id/text_request_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/label_request_time"
                    app:layout_constraintTop_toBottomOf="@id/label_request_time" />

                <TextView
                    android:id="@+id/text_request_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/label_request_time"
                    app:layout_constraintTop_toBottomOf="@id/text_request_time" />

                <TextView
                    android:id="@+id/label_finish_time"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/finish_time"
                    app:layout_constraintStart_toStartOf="@id/label_to"
                    app:layout_constraintTop_toBottomOf="@id/divider_address" />

                <TextView
                    android:id="@+id/text_finish_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/label_finish_time"
                    app:layout_constraintTop_toBottomOf="@id/label_finish_time" />

                <TextView
                    android:id="@+id/text_finish_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/label_finish_time"
                    app:layout_constraintTop_toBottomOf="@id/text_finish_time" />

                <ImageView
                    android:id="@+id/divider_details"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:src="#e0e0e0"
                    app:layout_constraintTop_toBottomOf="@id/text_request_date" />

                <TextView
                    android:id="@+id/label_details_cost"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/cost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_details" />

                <TextView
                    android:id="@+id/text_details_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="-"
                    app:layout_constraintStart_toStartOf="@id/label_details_cost"
                    app:layout_constraintTop_toBottomOf="@id/label_details_cost" />

                <TextView
                    android:id="@+id/label_details_distance"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/distance_traveled"
                    app:layout_constraintStart_toStartOf="@id/label_to"
                    app:layout_constraintTop_toBottomOf="@id/divider_details" />

                <TextView
                    android:id="@+id/text_details_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="-"
                    app:layout_constraintStart_toStartOf="@id/label_details_distance"
                    app:layout_constraintTop_toBottomOf="@id/label_details_distance" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_hide_travel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/hide_travel"
                    app:layout_constraintEnd_toStartOf="@id/button_Complaint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_details_cost" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_Complaint"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/write_complaint"
                    app:layout_constraintBaseline_toBaselineOf="@id/button_hide_travel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_hide_travel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
</layout>
